logs/dag_id=save_city_info_weather_v01/run_id=manual__2024-09-14T20:35:24.785613+00:00/task_id=insert_data/attempt=2.log
[2024-09-14T20:40:31.464+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:35:24.785613+00:00 [queued]>
[2024-09-14T20:40:31.473+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:35:24.785613+00:00 [queued]>
[2024-09-14T20:40:31.474+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:40:31.474+0000] {taskinstance.py:1284} INFO - Starting attempt 2 of 6
[2024-09-14T20:40:31.474+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:40:31.483+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-14 20:35:24.785613+00:00
[2024-09-14T20:40:31.486+0000] {standard_task_runner.py:55} INFO - Started process 15751 to run task
[2024-09-14T20:40:31.490+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather_v01', 'insert_data', 'manual__2024-09-14T20:35:24.785613+00:00', '--job-id', '260', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpisalri09']
[2024-09-14T20:40:31.490+0000] {standard_task_runner.py:83} INFO - Job 260: Subtask insert_data
[2024-09-14T20:40:31.542+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:35:24.785613+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T20:40:31.577+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T20:35:24.785613+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T20:35:24.785613+00:00
[2024-09-14T20:40:31.577+0000] {sql.py:253} INFO - Executing: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s")
[2024-09-14T20:40:31.582+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:40:31.693+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:40:31.716+0000] {sql.py:364} INFO - Running statement: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s"), parameters: {'name': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["name"]}}', 'max_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["max_temp"]}}', 'min_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["min_temp"]}}', 'wind': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["wind"]}}', 'description': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["description"]}}'}
[2024-09-14T20:40:31.719+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 367, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^

[2024-09-14T20:40:31.725+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=save_city_info_weather_v01, task_id=insert_data, execution_date=20240914T203524, start_date=20240914T204031, end_date=20240914T204031
[2024-09-14T20:40:31.732+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 260 for task insert_data (syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^
; 15751)
[2024-09-14T20:40:31.760+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T20:40:31.771+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
